# clifford

clifford_bringup/: CMakeLists.txt  package.xml
clifford_bringup/launch/: inverse_kinematics_mapping.launch.py  robot_state_publisher.launch.py
clifford_bringup/scripts/: serial_port_writer.py
clifford_bringup/servomotors/: servomotors.ino
clifford_description/: CMakeLists.txt  package.xml
clifford_description/config/: controllers.yaml
clifford_description/description/: back_left_leg.xacro  back_right_leg.xacro  base.xacro  clifford.urdf.xacro  clifford_core.xacro  front_left_leg.xacro  front_right_leg.xacro  gazebo_reference.xacro  ros2_control.xacro
clifford_description/launch/: gazebo.launch.py  joint_group_position_controller.launch.py  robot_state_publisher.launch.py  visualization.launch.py
clifford_description/meshes/: back_left_elbow.STL  back_left_shoulder.STL  back_left_wrist.STL  back_right_elbow.STL  back_right_shoulder.STL  back_right_wrist.STL  base_footprint.STL  front_left_elbow.STL  front_left_shoulder.STL  front_left_wrist.STL  front_right_elbow.STL  front_right_shoulder.STL  front_right_wrist.STL
clifford_description/scripts/: joint_group_position_publisher.py
clifford_gazebo/: CMakeLists.txt  package.xml
clifford_gazebo/config/: controllers.yaml  visualization.rviz
clifford_gazebo/description/: back_left_limb.xacro  back_right_limb.xacro  base.xacro  clifford_core.xacro  front_left_limb.xacro  front_right_limb.xacro  gazebo_reference.xacro  ros2_control.xacro
clifford_gazebo/launch/: gazebo.launch.py  inverse_kinematics.launch.py  joint_group_position_controller.launch.py  visualization.launch.py
clifford_locomotion/: CMakeLists.txt  package.xml
clifford_locomotion/config/: inverse_kinematics.rviz
clifford_locomotion/launch/: inverse_kinematics.launch.py  robot_state_publisher.launch.py
clifford_locomotion/scripts/: inverse_kinematics_publisher.py
(+15 files in other folders)
